# Parcial-Matematica-Discreta

./: CMakeLists.txt  README.md  main.cpp  run.sh
